--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+.section-inner{  
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1366px;
+}
 
 .App-logo {
   height: 40vmin;
